aggiunti hover sui testi trimmati nelle varie schede

--- a/frontend/src/app/components/single-choice/single-choice.component.html
+++ b/frontend/src/app/components/single-choice/single-choice.component.html
@@ -5,7 +5,7 @@
         <div class="div-inline">
             <div id="div-info">
                 <label><span id="span-header">Testo</span><br>
-                    <span class="span-text">
+                    <span class="span-text" matTooltip="{{singleChoice.testo}}" matTooltipPosition="right">
                         {{ singleChoice.testo.length > 25 ? (singleChoice.testo | slice:0:25) + '...' :
                         singleChoice.testo }}
                     </span></label><br>
@@ -13,7 +13,7 @@
             </div>
             <p></p>
             <div id="div-info">
-                <label><span id="span-header">Risposta Indovinello</span><br><span class="span-text">{{
+                <label><span id="span-header">Risposta Indovinello</span><br><span class="span-text" matTooltip="{{singleChoice.risposta}}" matTooltipPosition="right">{{
                         singleChoice.risposta.length > 25 ? (singleChoice.risposta | slice:0:25) + '...' :
                         singleChoice.risposta }}</span></label><br>
             </div>
@@ -21,14 +21,14 @@
         <div class="div-inline">
             <div id="div-info">
                 <label *ngIf="textCorrectAnswer"><span id="span-header">Testo destinazione corretta</span><br><span
-                        class="span-text">{{ textCorrectAnswer.length > 25 ? (textCorrectAnswer | slice:0:25) + '...' :
+                        class="span-text" matTooltip="{{textCorrectAnswer}}" matTooltipPosition="right">{{ textCorrectAnswer.length > 25 ? (textCorrectAnswer | slice:0:25) + '...' :
                         textCorrectAnswer }}
                     </span></label><br>
             </div>
             <p></p>
             <div id="div-info">
                 <label *ngIf="textWrongAnswer"><span id="span-header">Testo destinazione errato</span><br><span
-                        class="span-text">{{ textWrongAnswer.length > 25 ? (textWrongAnswer | slice:0:25) + '...' :
+                        class="span-text" matTooltip="{{textWrongAnswer}}" matTooltipPosition="right">{{ textWrongAnswer.length > 25 ? (textWrongAnswer | slice:0:25) + '...' :
                         textWrongAnswer }}
                     </span></label><br>
             </div>
@@ -41,26 +41,26 @@
     <div class="div-single-choice">
         <div class="div-inline">
             <div id="div-info">
-                <label><span id="span-header">Testo</span><br><span class="span-text"> {{ singleChoice.testo.length > 25
+                <label><span id="span-header">Testo</span><br><span class="span-text" matTooltip="{{singleChoice.testo}}" matTooltipPosition="right"> {{ singleChoice.testo.length > 25
                         ? (singleChoice.testo | slice:0:25) + '...' :
                         singleChoice.testo }}</span></label><br>
             </div>
             <p></p>
             <div id="div-info">
-                <label><span id="span-header">Risposta Indovinello</span><br><span class="span-text">{{
+                <label><span id="span-header">Risposta Indovinello</span><br><span class="span-text" matTooltip="{{singleChoice.risposta}}" matTooltipPosition="right">{{
                         singleChoice.risposta.length > 25 ? (singleChoice.risposta | slice:0:25) + '...' :
                         singleChoice.risposta }}</span></label><br>
             </div>
         </div>
         <div class="div-inline">
             <div id="div-info">
-                <label><span id="span-header">Testo destinazione corretta</span><br><span class="span-text">{{
+                <label><span id="span-header">Testo destinazione corretta</span><br><span class="span-text" matTooltip="{{textCorrectAnswer}}" matTooltipPosition="right">{{
                         textCorrectAnswer.length > 25 ? (textCorrectAnswer | slice:0:25) + '...' : textCorrectAnswer
                         }}</span></label><br>
             </div>
             <p></p>
             <div id="div-info">
-                <label><span id="span-header">Testo destinazione errato</span><br><span class="span-text">{{
+                <label><span id="span-header">Testo destinazione errato</span><br><span class="span-text" matTooltip="{{textWrongAnswer}}" matTooltipPosition="right">{{
                         textWrongAnswer.length > 25 ? (textWrongAnswer | slice:0:25) + '...' : textWrongAnswer
                         }}</span></label><br>
             </div>
