--- a/frontend/src/app/components/story-objects/story-objects.component.html
+++ b/frontend/src/app/components/story-objects/story-objects.component.html
@@ -5,10 +5,10 @@
     </div>
     <div class="div-objects" *ngFor="let item of storyObjects">
         <div class="div-info">
-            <div id="div-text"><label><span class="span-header">Nome</span><br><span class="span-text">{{ item.nome.length > 25 ? (item.nome | slice:0:25) + '...' : item.nome }}
+            <div id="div-text"><label><span class="span-header">Nome</span><br><span class="span-text" matTooltip="{{item.nome}}" matTooltipPosition="right">{{ item.nome.length > 25 ? (item.nome | slice:0:25) + '...' : item.nome }}
             </span></label></div>
             <p></p>
-            <div id="div-text"><label><span class="span-header">Descrizione</span><br><span class="span-text">{{ item.descrizione.length > 25 ? (item.descrizione | slice:0:25) + '...' : item.descrizione }}
+            <div id="div-text"><label><span class="span-header">Descrizione</span><br><span class="span-text" matTooltip="{{item.descrizione}}" matTooltipPosition="right">{{ item.descrizione.length > 25 ? (item.descrizione | slice:0:25) + '...' : item.descrizione }}
             </span></label></div>
         </div>
         <div class="div-button">
@@ -23,9 +23,9 @@
     </div>
     <div class="div-objects" *ngFor="let item of storyObjects">
         <div class="div-info">
-            <div id="div-text"><label><span class="span-header">Nome</span><br><span class="span-text">{{ item.nome.length > 25 ? (item.nome | slice:0:25) + '...' : item.nome }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Nome</span><br><span class="span-text" matTooltip="{{item.nome}}" matTooltipPosition="right">{{ item.nome.length > 25 ? (item.nome | slice:0:25) + '...' : item.nome }}</span></label></div>
             <p></p>
-            <div id="div-text"><label><span class="span-header">Descrizione</span><br><span class="span-text">{{ item.descrizione.length > 25 ? (item.descrizione | slice:0:25) + '...' : item.descrizione }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Descrizione</span><br><span class="span-text" matTooltip="{{item.descrizione}}" matTooltipPosition="right">{{ item.descrizione.length > 25 ? (item.descrizione | slice:0:25) + '...' : item.descrizione }}</span></label></div>
         </div>
         <div class="div-button">
             <div class="remove-button"><button (click)="editStoryObjectText(item)">Modifica</button></div>
