--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -11,7 +11,7 @@
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
             <p></p>
-            <div id="div-text"><label><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Oggetto rilasciato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
             <div class="div-button">
                 <div class="div-button-scenario"><button (click)="redirectToScenarioType(item,item.tipo_risposta)">Scelte</button></div>
             </div>
@@ -26,7 +26,7 @@
             <p></p>
             <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
             <p></p>
-            <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Oggetto rilasciato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
             <p></p>
             <div class="div-button-final">
                 <button id="button-final" (click)="removeScenario(item.id)">Rimuovi</button>
