--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -5,13 +5,13 @@
         <form (ngSubmit)="onLogin()">
             <div id="div-form">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Inserisci il tuo nickname" maxlength="50" required [(ngModel)]="username">
+                <input type="text" id="username" name="username" placeholder="Inserisci il tuo username" maxlength="50" required [(ngModel)]="username">
             </div>
             <div id="div-form">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Inserisci la tua password" maxlength="50"  required  [(ngModel)]="password">
             </div>
-            <button type="submit" class="btn-login">Login</button>
+            <button type="submit" class="btn-login">Accedi</button>
         </form>
         <p class="register-link">Non sei ancora registrato? <a href="/register">Clicca qui</a></p>
     </div>
