--- a/frontend/src/app/components/match/match.component.html
+++ b/frontend/src/app/components/match/match.component.html
@@ -17,8 +17,8 @@
             <div class="div-text">
                 <p id="title">Wow, come è <span>vuoto</span>...</p>
                 <p></p>
-                <p id="text-match">sembra che tu non abbia <span>nessuna</span> partita in <span>corso</span>.</p>
-                <p id="text-match"><a href="handlerPlaypage">Clicca qui</a> e inizia a <span>giocare</span>.</p>
+                <p id="text-match">sembra che tu non abbia <span>nessuna</span> partita  <span>giocata</span>.</p>
+                <p id="text-match"><a href="handlerPlaypage">Clicca qui</a>e inizia a <span>giocare</span>.</p>
             </div>
         </div>
     </ng-template>
