--- a/frontend/src/app/components/multiple-choice/multiple-choice.component.html
+++ b/frontend/src/app/components/multiple-choice/multiple-choice.component.html
@@ -10,7 +10,7 @@
             <p></p>
             <div id="div-text"><label><span class="span-header">Testo scenario di destinazione</span><br><span class="span-text">{{ scenarioTextMap.get(item.id) }}</span></label></div>
             <p></p>
-            <div id="div-text"><label><span class="span-header">Oggetto</span><br><span class="span-text">{{ requiredMap.get(item.id) }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Oggetto richiesto</span><br><span class="span-text">{{ requiredMap.get(item.id) }}</span></label></div>
             <div class="div-button-multiple-choice"><button (click)="removeMultipleChoice(item.id)">Rimuovi</button></div>
         </div>
     </div>
