--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="div-button">
             <!-- Mostra questi pulsanti solo se l'utente NON è autenticato -->
-            <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Log in</button>
+            <button mat-button routerLink="/login" *ngIf="!isAuthenticated()">Accedi</button>
             <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Registrati</button>
 
             <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
