--- a/frontend/src/app/components/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/payment-page/payment-page.component.html
@@ -14,7 +14,7 @@
                 <input type="cardHolder" id="cardHolder" name="cardHolder" required [(ngModel)]="cardHolder"required>
             </div>
             <div class="div-form">
-                <label for="cardNumber">Numero della carte<span>*</span></label>
+                <label for="cardNumber">Numero della carta<span>*</span></label>
                 <input type="cardNumber" id="cardNumber" name="cardNumber" required [(ngModel)]="cardNumber">
             </div>
             <div class="div-form">
