--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
         <form (ngSubmit)="onSubmit()">
             <div id="div-form">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Inserisci il tuo nickname" maxlength="50" required [(ngModel)]="username">
+                <input type="text" id="username" name="username" placeholder="Inserisci il tuo username" maxlength="50" required [(ngModel)]="username">
             </div>
             <div id="div-form">
                 <label for="password">Password</label>
