aggiunto bottone relazione nella home

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -6,6 +6,7 @@
         <div id="div-button">
             <a href="https://docs.google.com/document/d/e/2PACX-1vQT60002z4ymBNlmkg-5S2xZ4z1RUGPX2GqMxegJK7sw6_dsQEfgzr_lN7A0EqXwLioOlCCS_aSB3rO/pub">Specifiche tecniche</a>
             <a href="https://github.com/DavideDeRosa/storJ_SWE.git">Repository GitHub</a>
+            <a href="https://docs.google.com/document/d/12nX1O3r97rHYZSwVZxLQrNB4b6FamV1uYsX-1Ptvj4c">Relazione</a>
         </div>
     </div>
 </div>
