--- a/frontend/src/app/components/single-choice/single-choice.component.css
+++ b/frontend/src/app/components/single-choice/single-choice.component.css
@@ -4,22 +4,23 @@
 
 .container {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
-    text-decoration: none;
+    width: 100vw;
+    gap: 20px; 
+    margin-top: 2rem;
+    margin-bottom: 2rem; 
 }
 
-.div-single-choice {
-    display: inline;
-    margin-top: 7.5rem;
-    padding: 40px 40px;
-    width: 30%;
-    height: 250px;
-    background-color: rgb(244, 244, 244);
-    border-radius: 10px;
-    text-align: justify;
-    box-shadow: 10px 10px 5px #aaaaaa;
+.div-title {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    text-align: center;
+    width: 78%; 
+    margin-top: 5rem;
+    border-bottom: 2px solid rgb(204, 204, 204, 0.7);
+    border-radius: none;
 }
 
 #title {
@@ -27,7 +28,6 @@
     font-weight: bold;
     width: auto;
     text-align: center;
-    margin-bottom: 2rem;
 }
 
 p {
@@ -37,6 +37,17 @@ p {
 
 span {
     color: red;
+}
+
+.div-single-choice {
+    display: inline;
+    padding: 40px 40px;
+    width: 30%;
+    height: 250px;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    text-align: justify;
+    box-shadow: 10px 10px 5px #aaaaaa;
 }
 
 .div-inline {
